Fix sidenote expansion on mobile

--- a/_sass/_tufte-extra.scss
+++ b/_sass/_tufte-extra.scss
@@ -56,3 +56,5 @@ hr { width: 70%; }
   blockquote p, blockquote footer, div.epigraph > blockquote > footer,.MJXc-display { width: 100%; }
   .sidenote-number:after { text-decoration: underline; }
 }
+
+li { clear: left; }
